--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@
 .row7{
   margin-top: 20px;
 }
+.row8{
+  margin-top: 50px;
+}
+.row9{
+  margin-top: 50px;
+}
+.container{
+  box-shadow: 0 2px 4px rgba(148, 148, 148, 0.5);
+  border-radius: 10px;
+}
 .logo{
   margin-left: 70px;
 }
@@ -29,6 +39,12 @@
 }
 .btn-success{
   background-color: #31d078;
+}
+.cursos{
+  background-color: #31d078;
+  margin-top: 50px;
+  align-self: center;
+  width: 200px;
 }
 .outline{
   width: 210px;
@@ -62,6 +78,17 @@
   font-weight: 400;
   color: #ffffff;
 }
+.buy{
+  width: 228px;
+  height: 42px;
+  border-radius: 5px;
+  background-color: #5653b9;
+  font-size: 13px;
+  padding: 5px;
+}
+.p{
+  padding: 10px;
+}
 .p1{
   text-align: center;
   width: 596px;
@@ -79,4 +106,28 @@
   font-weight: 400;
   margin-left: 45px;
   margin-top: 20px;
+}
+.p3{
+  width: 136px;
+  height: 13px;
+  color: #101116;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 8px;
+}
+.p4{
+  width: 193px;
+  height: 37px;
+  color: #202025;
+  font-size: 16px;
+  font-weight: 600;
+  padding-left: 8px;
+}
+.p5{
+  width: 80px;
+  height: 10px;
+  color: #686868;
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: 5px;
 }
