got basic structure with spans

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-.block{
+.block1{
   background-image: url('background.png');
   position:relative;
   overflow:hidden;
   border-radius:0 0 50% 50%;
   height: 600px
+}
+.block2{
+  background-color: #5653b9;
+  margin-top: 60px;
 }
 .row1{
   margin-top: 20px;
@@ -22,6 +26,9 @@
 }
 .row9{
   margin-top: 50px;
+}
+.row13{
+  margin-top: 80px;
 }
 .container{
   box-shadow: 0 2px 4px rgba(148, 148, 148, 0.5);
@@ -86,6 +93,18 @@
   font-size: 13px;
   padding: 5px;
 }
+.t1{
+  padding-right: 270px;
+}
+.t2{
+  padding-right: 270px;
+}
+.t3{
+  padding-right: 270px;
+}
+.t4{
+
+}
 .p{
   padding: 10px;
 }
@@ -130,4 +149,23 @@
   font-size: 12px;
   font-weight: 500;
   margin-top: 5px;
+}
+.p6{
+  width: 433px;
+  height: 35px;
+  color: #ffffff;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 35px;
+}
+.p7{
+  width: 566px;
+  height: 44px;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 350;
+  text-align: center;
+  margin-left: 50px;
+  margin-top: 15px;
 }
