--- a/style.css
+++ b/style.css
@@ -9,30 +9,34 @@
   background-color: #5653b9;
   margin-top: 60px;
 }
-.row1{
+.row-1{
   margin-top: 20px;
 }
-.row2{
+.row-2{
   margin-top: 100px;
 }
-.row6{
+.row-6{
   margin-top: 40px;
 }
-.row7{
+.row-7{
   margin-top: 20px;
 }
-.row8{
+.row-8{
   margin-top: 50px;
 }
-.row9{
+.row-9{
   margin-top: 50px;
 }
-.row13{
+.row-13{
   margin-top: 80px;
+  padding-bottom: 100px;
 }
 .container{
   box-shadow: 0 2px 4px rgba(148, 148, 148, 0.5);
   border-radius: 10px;
+}
+.col-3{
+
 }
 .logo{
   margin-left: 70px;
@@ -168,4 +172,35 @@
   text-align: center;
   margin-left: 50px;
   margin-top: 15px;
+}
+.p8-1{
+  opacity: 0.15;
+  color: #ffffff;
+  font-size: 60px;
+  font-weight: 600;
+  margin-top: -25px;
+  margin-left: 20px;
+  text-align: right;
+}
+.p8-2{
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 600;
+}
+.p8-3{
+  color: #ffffff;
+  font-size: 14px;
+  margin-top: -10px;
+}
+.c-13-1{
+  margin-left: 50px;
+}
+.c-13-2{
+  margin-left: -50px;
+}
+.c-13-3{
+  margin-left: -50px;
+}
+.c-13-4{
+  margin-left: -50px;
 }
