--- a/style.css
+++ b/style.css
@@ -2,12 +2,18 @@
   background-image: url('background.png');
   position:relative;
   overflow:hidden;
-  border-radius:0 0 50% 50%;
-  height: 600px
+  border-radius: 0 0 50% 50%;
+  height: 600px;
+  width: 1450px;
+  align-self: center;
 }
 .block2{
   background-color: #5653b9;
   margin-top: 60px;
+}
+.block3{
+  background-color: #31d078;
+  margin-top: 150px;
 }
 .row-1{
   margin-top: 20px;
@@ -15,11 +21,14 @@
 .row-2{
   margin-top: 100px;
 }
+.row-5{
+  margin-top: 100px;
+}
 .row-6{
-  margin-top: 40px;
+  margin-top: 20px;
 }
 .row-7{
-  margin-top: 20px;
+  margin-top: 50px;
 }
 .row-8{
   margin-top: 50px;
@@ -27,9 +36,40 @@
 .row-9{
   margin-top: 50px;
 }
-.row-13{
+.row-11{
   margin-top: 80px;
   padding-bottom: 100px;
+}
+.row-13{
+  margin-top: 60px;
+}
+.row-14{
+  margin-top: 50px;
+  text-align: center;
+}
+.row-15-1{
+  padding-top: 40px;
+}
+.row-15-2{
+  padding-top: 20px;
+}
+.row-15-3{
+  padding-top: 10px;
+}
+.row-16{
+  margin-top: 50px;
+}
+.row-18{
+  height: 50px;
+}
+.pagination{
+  text-align: center;
+}
+.page-link{
+  border-color: white;
+}
+.pag{
+  margin: auto;
 }
 .container{
   box-shadow: 0 2px 4px rgba(148, 148, 148, 0.5);
@@ -53,7 +93,7 @@
 }
 .cursos{
   background-color: #31d078;
-  margin-top: 50px;
+  margin: auto;
   align-self: center;
   width: 200px;
 }
@@ -76,19 +116,6 @@
   font-weight: 600;
   color: #ffffff;
 }
-.title{
-  text-align: center;
-  font-size: 48px;
-  font-weight: 600;
-  color: #ffffff;
-}
-.subtitle{
-  margin-top: 30px;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 400;
-  color: #ffffff;
-}
 .buy{
   width: 228px;
   height: 42px;
@@ -96,6 +123,17 @@
   background-color: #5653b9;
   font-size: 13px;
   padding: 5px;
+}
+.parent{
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.text{
+  text-align: center;
+}
+.footer{
+  background-color: black;
 }
 .t1{
   padding-right: 270px;
@@ -112,25 +150,38 @@
 .p{
   padding: 10px;
 }
-.p1{
+.p-2-1{
+  text-align: center;
+  font-size: 48px;
+  font-weight: 600;
+  color: #ffffff;
+}
+.p-2-2{
+  margin-top: 30px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  color: #ffffff;
+}
+.p-4-1{
   text-align: center;
   width: 596px;
   height: 78px;
   font-size: 35px;
   font-weight: 600;
-  margin-left: 25px;
-  margin-top: 50px;
+  margin: auto;
+  padding-top: 50px;
 }
-.p2{
+.p-4-2{
   text-align: center;
   width: 566px;
   height: 44px;
   font-size: 20px;
   font-weight: 400;
-  margin-left: 45px;
-  margin-top: 20px;
+  margin: auto;
+  padding-top: 85px;
 }
-.p3{
+.p-7-1{
   width: 136px;
   height: 13px;
   color: #101116;
@@ -138,7 +189,7 @@
   font-weight: 400;
   padding: 8px;
 }
-.p4{
+.p-7-2{
   width: 193px;
   height: 37px;
   color: #202025;
@@ -146,7 +197,7 @@
   font-weight: 600;
   padding-left: 8px;
 }
-.p5{
+.p-7-3{
   width: 80px;
   height: 10px;
   color: #686868;
@@ -154,26 +205,51 @@
   font-weight: 500;
   margin-top: 5px;
 }
-.p6{
+.p-8-1{
+  width: 136px;
+  height: 13px;
+  color: #101116;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 8px;
+}
+.p-8-2{
+  width: 193px;
+  height: 37px;
+  color: #202025;
+  font-size: 16px;
+  font-weight: 600;
+  padding-left: 8px;
+}
+.p-8-3{
+  width: 80px;
+  height: 10px;
+  color: #686868;
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: 5px;
+}
+.p-10-1{
   width: 433px;
   height: 35px;
   color: #ffffff;
   font-size: 35px;
   font-weight: 600;
   text-align: center;
-  margin-top: 35px;
+  margin: auto;
+  padding: 20px;
 }
-.p7{
+.p-10-2{
   width: 566px;
   height: 44px;
   color: #ffffff;
   font-size: 20px;
   font-weight: 350;
   text-align: center;
-  margin-left: 50px;
-  margin-top: 15px;
+  margin: auto;
+  padding: 30px;
 }
-.p8-1{
+.p-11-1{
   opacity: 0.15;
   color: #ffffff;
   font-size: 60px;
@@ -182,25 +258,148 @@
   margin-left: 20px;
   text-align: right;
 }
-.p8-2{
+.p-11-2{
   color: #ffffff;
   font-size: 18px;
   font-weight: 600;
 }
-.p8-3{
+.p-11-3{
   color: #ffffff;
   font-size: 14px;
   margin-top: -10px;
 }
-.c-13-1{
+.p-12-1{
+  width: 433px;
+  height: 35px;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  margin: auto;
+  padding: 50px;
+}
+.p-12-2{
+  width: 566px;
+  height: 44px;
+  font-size: 20px;
+  font-weight: 350;
+  text-align: center;
+  margin: auto;
+}
+.p-13-1{
+  color: #5653b9;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+  margin: auto;
+  padding-top: 15px;
+}
+.p-13-2{
+  color: #202025;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  margin: auto;
+  padding-top: 10px;
+}
+.p-13-3{
+  color: #202025;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 15px;
+}
+.p-13-i{
+  width: 148;
+  height: 148;
+  margin: auto;
+}
+.p-15-1{
+  width: 546px;
+  height: 85px;
+  color: #ffffff;
+  font-size: 35px;
+  font-weight: 600;
+}
+.p-15-2{
+  width: 279px;
+  height: 27px;
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 500;
+}
+.p-15-3{
+  width: 251px;
+  height: 27px;
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 500;
+  padding-left: 3px;
+}
+.p-15-i{
+  margin-bottom: 10px;
+}
+.p-15-i-2{
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+.p-15-i-3{
+  margin: auto;
+  margin-top: -50px;
+  position: relative;
+  top: 0;
+  left: 0;
+  border: 1px solid #000000;
+}
+.p-15-i-4{
+  margin: auto;
+  position: absolute;
+  top: 70px;
+  left: 250px;
+  border: 1px solid #000000;
+}
+.p-16-1{
+  width: 528px;
+  height: 30px;
+  color: #000000;
+  font-size: 25px;
+  font-weight: 600;
+  margin: auto;
+}
+.p-16-2{
+  width: 752px;
+  height: 24px;
+  color: #000000;
+  font-size: 20px;
+  font-weight: 400;
+  margin: auto;
+  padding-top: 10px;
+}
+.p-17-i{
+  margin: auto;
+  padding-top: 60px;
+  padding-bottom: 50px;
+}
+.p-18-1{
+  margin: auto;
+  margin-top: 10px;
+  color: white;
+}
+.p-18-i{
+  margin: auto;
+  width: 16px;
+  height: 34px;
+  margin-top: 10px;
+}
+.c-11-1{
   margin-left: 50px;
 }
-.c-13-2{
+.c-11-2{
   margin-left: -50px;
 }
-.c-13-3{
+.c-11-3{
   margin-left: -50px;
 }
-.c-13-4{
+.c-11-4{
   margin-left: -50px;
 }
