--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   box-shadow: none;
   max-width: 1440px;
   min-width: 1440px;
+  overflow: hidden;
 }
 .block1{
   position: relative;
@@ -69,6 +70,9 @@
 }
 .row-6{
   margin-top: 20px;
+}
+.row-7-0{
+  display: none;
 }
 .row-7{
   margin-top: 54px;
@@ -622,21 +626,25 @@
   text-indent: 0px;
 }
 
+@media (max-width: 767px){
 
-@media (max-width: 425px){
+}
+
+@media (max-width: 575px){
+  body{
+    width: 100%;
+  }
   .container-fluid{
     max-width: 1440px;
-    min-width: 350px;
+    min-width: 576px;
+    margin-left: -15px;
   }
   .block1{
-    width: 320px;
+    width: 570px;
     height: 317px;
   }
   .row-1{
     margin-top: 0px;
-  }
-  .nav{
-    display: none;
   }
   .bg{
     display: none;
@@ -644,7 +652,7 @@
   .bg-mobile{
     width: 791px;
     height: 327px;
-    margin-left: -245px;
+    margin-left: -125px;
     margin-top: -11px;
     display: block;
   }
@@ -662,6 +670,514 @@
     height: 33px;
     background-color: inherit;
     border-width: 0px;
+    margin-left: 50px;
+  }
+  .nav-mobile{
+    margin-left: -90px;
+    margin-bottom: -260px;
+    background: rgba(57, 34, 175, 0.9);
+    position: absolute;
+    z-index: 5;
+  }
+  ul{
+    list-style-type: none;
+  }
+  .nav-mobile-item{
+    font-size: 12px;
+    margin-right: 35px;
+    width: 120px;
+  }
+  .lines{
+    width: 25px;
+    height: 25px;
+  }
+  .p-1-i{
+    width: 17px;
+    height: 34px;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  .row-2{
+    margin-top: 63px;
+    z-index: 1;
+  }
+  .p-2-1{
+    font-size: 24px;
+    font-weight: 600;
+    width: 400px;
+    height: 43px;
+    line-height: 27px;
+    margin-left: -15px;
+    margin-top: 8px;
+  }
+  .p-2-2{
+    font-size: 16px;
+    font-weight: 400;
+    width: 300px;
+    height: 17px;
+    margin-left: 35px;
+    margin-top: 7px;
+    -webkit-transform:scale(1.15,1);
+  }
+  .btn-flecha{
+    width: 44px;
+    height: 44px;
+    margin-top: -35px;
+    margin-left: 20px;
+  }
+  .flecha{
+    width: 20px;
+    height: 12px;
+    padding-right: 2px;
+  }
+  .row-4{
+    margin-top: 15px;
+    height: 130px;
+  }
+  .row-4-1{
+    width: 400px;
+    height: 43px;
+    margin-left: 110px;
+  }
+  .p-4-1{
+    font-size: 24px;
+    font-weight: 600;
+    width: 400px;
+    height: 43px;
+    margin-left: -70px;
+  }
+  .row-4-2{
+    height: 44px;
+    padding-top: 15px;
+  }
+  .p-4-2{
+    width: 320px;
+    height: 44px;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 10px;
+    margin-left: 90px;
+    -webkit-transform:scale(1.15,1);
+  }
+  .row-5{
+    display: none;
+  }
+  .row-5-1{
+    display: block;
+    margin-top: 20px;
+  }
+  .academies{
+    margin-left: 120px;
+  }
+  .academies div.collapse{
+    margin-top: 5px;
+    margin-left: -20px;
+  }
+  .aca-item{
+    margin: auto;
+    width: 250px;
+  }
+  .drop-2{
+    width: 292px;
+    height: 44px;
+    text-align: left;
+  }
+  .drop-i{
+    width: 18px;
+    height: 11px;
+    margin-left: 95px;
+  }
+  .row-6{
+    display: none;
+  }
+  .row-7-0{
+    display: none;
+  }
+  .row-7{
+    margin-top: 14px;
+  }
+  .c{
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 20px;
+  }
+  .c-7{
+    width: 205px;
+    height: 285px;
+  }
+  .c-a{
+    margin-left: 70px;
+  }
+  .c-b{
+    margin-right: 40px
+  }
+  .c-c{
+    margin-top: 10px;
+  }
+  .p-7-i{
+    margin: auto;
+    width: 205px;
+    height: 120px;
+  }
+  .p-7-1{
+    width: 132px;
+    height: 11px;
+    font-size: 11px;
+    margin-top: 18px;
+    margin-left: 16px;
+  }
+  .p-7-2{
+    width: 182px;
+    height: 45px;
+    font-size: 15px;
+    font-weight: 600;
+    margin-top: -10px;
+    margin-left: 20px;
+  }
+  .row-7-0-1{
+    margin-left: -8px;
+    margin-top: -5px;
+  }
+  .p-7-i2{
+    width: 18px;
+    height: 12px;
+    margin-top: -20px;
+    margin-left: -10px;
+  }
+  .p-7-3{
+    width: 81px;
+    height: 11px;
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: -6px;
+    margin-left: -12px;
+  }
+  .p-7-i3{
+    width: 18px;
+    height: 12px;
+    margin-top: -35px;
+    margin-left: -8px;
+  }
+  .p-7-4{
+    width: 19px;
+    height: 11px;
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: -34px;
+    margin-left: 18px;
+  }
+  .p{
+    padding: 7px;
+  }
+  .buy{
+    width: 185px;
+    height: 28px;
+    padding: 5px;
+    margin: auto;
+  }
+  .cart{
+    width: 18px;
+    height: 18px;
+    margin-left: -80px;
+    margin-bottom: 15px;
+  }
+  .d{
+    width: 65px;
+    height: 13px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: -33px;
+    margin-left: 70px;
+  }
+  .row-8{
+    display: none;
+  }
+  .row-9{
+    margin-top: 53px;
+  }
+  .cursos{
+    width: 215px;
+    height: 44px;
+  }
+  .block2{
+    height: 423px;
+    margin-top: 73px;
+  }
+  .row-10{
+    padding-top: 0;
+    padding-top: 30px;
+    margin-bottom: 60px;
+  }
+  .p-10-1{
+    width: 305px;
+    height: 22px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
+    margin-left: 7px;
+    margin: auto;
+  }
+  .p-10-2{
+    width: 320px;
+    height: 44px;
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: -10px;
+  }
+  .row-11{
+    display: none;
+  }
+  .row-11-5{
+    display: block;
+  }
+  #carousel-2{
+    height: 280px;
+  }
+  .carousel-2{
+    width: 100%;
+    height: 205px;
+    padding-top: 0px;
+  }
+  .carousel-2 div.active{
+    margin: auto;
+  }
+  .indicators-2{
+    margin-top: 0px;
+    margin-bottom: 60px;
+  }
+  .carousel-indicators li.ind-2{
+    text-align: center;
+    background-color: #5653b9;
+    width: 20px;
+  }
+  .circle-2{
+    width: 12px;
+    height: 12px;
+  }
+  .active img.circle-2{
+    width: 19px;
+    height: 19px;
+  }
+  .active img.circle{
+    width: 17px;
+    height: 17px;
+  }
+  .e-c{
+    width: 250px;
+    height: 205px;
+    margin-left: 40px;
+    text-align: left;
+  }
+  .p-11-1{
+    width: 95px;
+    height: 73px;
+    font-size: 60px;
+    font-weight: 600;
+    margin-left: -35px;
+    -webkit-transform:scale(1.2,1);
+  }
+  .p-11-i{
+    width: 47px;
+    height: 47px;
+  }
+  .p-11-2{
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 25px;
+  }
+  .p-11-3{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+  .row-12{
+    margin-top: 50px;
+    margin-bottom: 45px;
+  }
+  .p-12-1{
+    width: 276px;
+    height: 22px;
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .p-12-2{
+    width: 307px;
+    height: 44px;
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 25px;
+  }
+  .carousel-1{
+    height: 300px;
+  }
+  .indicators-1{
+    margin-top: 0px;
+  }
+  #carousel{
+    height: 360px;
+  }
+  .carousel-indicators li.ind-1{
+    text-align: center;
+    width: 15px;
+  }
+  .block3{
+    margin-top: 100px;
+  }
+  .row-15{
+    height: 207px;
+  }
+  .row-15-1{
+    width: 200px;
+    margin-left: 0px;
+  }
+  .row-15-2{
+    margin-top: 0px;
+    margin-left: -5px;
+  }
+  .row-15-3{
+    width: 180px;
+    margin-top: 0px;
+    margin-left: 2px;
+  }
+  .row-15-3 div{
+    margin-left: -25px;
+  }
+  .p-15-1{
+    width: 200px;
+    height: 77px;
+    font-size: 17px;
+    font-weight: 600;
+  }
+  .p-15-2{
+    width: 128px;
+    height: 32px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  .p-15-i{
+    width: 13px;
+    height: 10px;
+  }
+  .p-15-3{
+    width: 120px;
+    height: 14px;
+    font-size: 12px;
+    font-weight: 500;
+    margin-right: 15px;
+    margin-top: 1px;
+    float: right;
+  }
+  .p-15-i-2{
+    width: 10px;
+    height: 16px;
+    margin-left: 0px;
+  }
+  .p-15-i-3{
+    width: 199px;
+    height: 233px;
+    margin-top: -26px;
+    top: 0;
+    left: 0px;
+  }
+  .p-15-i-4{
+    width: 112px;
+    height: 145px;
+    top: 50px;
+    left: 70px;
+  }
+  .f-1{
+    top: -250px;
+    left: 155px;
+  }
+  .row-16{
+    margin-top: 37px;
+  }
+  .p-16-1{
+    width: 306px;
+    height: 40px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 22px;
+    -webkit-transform:scale(1.1,1);
+  }
+  .p-16-2{
+    width: 330px;
+    height: 30px;
+    font-size: 14px;
+    font-weight: 400;
+    padding-top: 20px;
+    line-height: 17px;
+    -webkit-transform:scale(1.15,1);
+  }
+  .row-17{
+    overflow: hidden;
+  }
+  .p-17-i{
+    width: 572px;
+    height: 59px;
+    margin-top: 70px;
+    margin-bottom: 55px;
+    margin-left: -25px;
+  }
+  .p-18-i{
+    margin-left: 18px;
+  }
+  .p-18-1{
+    width: 150px;
+    height: 21px;
+    font-size: 12px;
+    font-weight: 600;
+    margin-left: 80px;
+    margin-top: 12px;
+    text-align: left;
+    -webkit-transform:scale(1.1,1);
+  }
+}
+
+
+
+
+@media (max-width: 425px){
+  body{
+    width: 100%;
+  }
+  .container-fluid{
+    max-width: 1440px;
+    min-width: 350px;
+    width: 100%;
+    padding-right: 0px;
+  }
+  .block1{
+    width: 320px;
+    height: 317px;
+  }
+  .row-1{
+    margin-top: 0px;
+  }
+  .bg{
+    display: none;
+  }
+  .bg-mobile{
+    width: 791px;
+    height: 327px;
+    margin-left: -245px;
+    margin-top: -11px;
+    display: block;
+  }
+  .drop-1{
+    width: 38px;
+    height: 33px;
+    background-color: inherit;
+    border-width: 0px;
+    margin-left: 0px;
+  }
+  .nav-mobile{
+    margin-left: -80px;
+  }
+  .nav-mobile ul{
+    padding-inline-start: 0px;
   }
   .lines{
     margin-bottom: 5px;
@@ -693,6 +1209,9 @@
     margin-top: 7px;
     -webkit-transform:scale(1.15,1);
   }
+  .row-3{
+    margin: auto;
+  }
   .btn-flecha{
     width: 44px;
     height: 44px;
@@ -712,6 +1231,7 @@
     width: 276px;
     height: 43px;
     margin-left: 0px;
+    margin: auto;
   }
   .p-4-1{
     font-size: 18px;
@@ -730,8 +1250,15 @@
     color: #000000;
     font-size: 12px;
     font-weight: 400;
+    margin: auto;
     padding-bottom: -250px;
     -webkit-transform:scale(1.15,1);
+  }
+  .academies{
+    margin-left: 0px;
+  }
+  .academies div{
+    margin: auto;
   }
   .row-5{
     display: none;
@@ -747,102 +1274,101 @@
     height: 44px;
     text-align: left;
   }
+  .drowdown{
+    margin: auto;
+  }
   .drop-i{
     width: 18px;
     height: 11px;
     margin-left: 95px;
   }
+  .row-7-0{
+    display: block;
+  }
   .row-7{
-    margin-top: 14px;
+    display: none;
   }
   .c{
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-top: 20px;
   }
   .c-7{
-    width: 138px;
-    height: 235px;
-  }
-  .c-a{
-    margin-left: 15px;
-    margin-right: 0px;
-  }
-  .c-b{
-    margin-left: -8px;
-  }
-  .c-c{
-    margin-top: 27px;
+    width: 205px;
+    height: 282px;
   }
   .p-7-i{
     margin: auto;
-    width: 138px;
-    height: 85px;
+    width: 205px;
+    height: 120px;
   }
   .p-7-1{
     width: 132px;
     height: 11px;
-    font-size: 9px;
-    margin-top: 10px;
-    margin-left: 12px;
+    font-size: 11px;
+    margin-top: 18px;
+    margin-left: 16px;
   }
   .p-7-2{
-    width: 132px;
+    width: 182px;
     height: 45px;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 600;
-    margin-top: -13px;
-    margin-left: 12px;
+    margin-top: -10px;
+    margin-left: 20px;
+  }
+  .row-7-0-1{
+    margin-left: -8px;
+    margin-top: -5px;
   }
   .p-7-i2{
-    width: 11px;
-    height: 7px;
+    width: 18px;
+    height: 12px;
     margin-top: -20px;
     margin-left: -10px;
   }
   .p-7-3{
     width: 81px;
     height: 11px;
-    font-size: 9px;
+    font-size: 12px;
     font-weight: 500;
-    margin-top: -2px;
-    margin-left: -20px;
+    margin-top: -6px;
+    margin-left: -12px;
   }
   .p-7-i3{
-    width: 9px;
-    height: 8px;
+    width: 18px;
+    height: 12px;
     margin-top: -35px;
     margin-left: -8px;
   }
   .p-7-4{
     width: 19px;
     height: 11px;
-    font-size: 9px;
+    font-size: 12px;
     font-weight: 500;
-    margin-top: -33px;
-    margin-left: 8px;
+    margin-top: -34px;
+    margin-left: 18px;
   }
   .p{
     padding: 7px;
   }
   .buy{
-    width: 125px;
-    height: 23px;
+    width: 185px;
+    height: 28px;
     padding: 5px;
     margin: auto;
   }
   .cart{
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
     margin-left: -80px;
     margin-bottom: 15px;
   }
   .d{
     width: 65px;
     height: 13px;
-    font-size: 11px;
+    font-size: 14px;
     font-weight: 600;
-    margin-top: -30px;
-    margin-left: 40px;
+    margin-top: -33px;
+    margin-left: 70px;
   }
   .row-8{
     display: none;
@@ -869,8 +1395,8 @@
     font-size: 18px;
     font-weight: 600;
     padding: 0;
-    margin: 0;
     margin-left: 7px;
+    margin: auto;
   }
   .p-10-2{
     width: 220px;
@@ -878,8 +1404,9 @@
     font-size: 12px;
     font-weight: 400;
     padding: 0;
-    margin: 12px;
     margin-left: 50px;
+    margin: auto;
+    margin-top: 10px;
   }
   .row-11{
     display: none;
@@ -894,7 +1421,7 @@
   }
   .indicators-2{
     margin-top: 0px;
-    margin-bottom: 140px;
+    margin-bottom: 40px;
   }
   .carousel-indicators li.ind-2{
     text-align: center;
@@ -979,6 +1506,7 @@
   }
   .row-15-1{
     width: 130px;
+    margin-left: 25px;
   }
   .row-15-2{
     margin-top: 0px;
@@ -987,6 +1515,9 @@
   .row-15-3{
     width: 180px;
     margin-top: 0px;
+    margin-left: 2px;
+  }
+  .row-15-3 div{
     margin-left: 2px;
   }
   .p-15-1{
@@ -1034,6 +1565,7 @@
   }
   .f-1{
     top: -250px;
+    left: 0px;
   }
   .row-16{
     margin-top: 57px;
